--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
       - monitoring
 
   order-service1:
-    image: cotaansbah/order-service:latest
+    image: cotaansbah/order-service:1.3.0
     container_name: order-service1
     hostname: order-service1
     environment:
@@ -31,7 +31,7 @@ services:
       - monitoring
 
   order-service2:
-    image: cotaansbah/order-service:latest
+    image: cotaansbah/order-service:1.3.0
     container_name: order-service2
     hostname: order-service2
     environment:
@@ -74,6 +74,19 @@ services:
       - ./grafana/logs:/var/log/grafana
     depends_on:
       - postgres
+    networks:
+      - monitoring
+
+  load-generator:
+    image: cotaansbah/monitoring-load:latest
+    container_name: load-generator
+    hostname: load-generator
+    restart: unless-stopped
+    environment:
+      - TARGET_HOSTS=order-service1:8080,order-service2:8081
+      - RPS=100
+      - GET_WEIGHT=99
+      - POST_WEIGHT=1
     networks:
       - monitoring
 
